resized workspace to prevent scrollbar render

--- a/client/src/components/DayPanels/DayPanels.less
+++ b/client/src/components/DayPanels/DayPanels.less
@@ -13,8 +13,8 @@ h3, p {
   width: 100%;
   min-width: 40vw;
   background-color: #colors[primary];
-  min-height: 100vh;
-  max-height: 100vh;
+  min-height: 92vh;
+  max-height: 92vh;
 }
 
 .popup {
@@ -58,12 +58,13 @@ h3, p {
 
 #top-container {
   flex: 1;
-  margin-bottom: 0.60em;
-  height: 70px;
+  margin-bottom: 1.5vh;
+  margin-top: 1vh;
+  max-height: 8vh;
 }
 
 #description-container {
-  height: 100%;
+  height: 8vh;
   border-radius: 10px;
   align-items: center;
 
@@ -84,18 +85,20 @@ h3, p {
 
 #bottom-container {
   flex: 6;
-  margin-top: 1.5em;
+  margin-top: 1vh;
+  margin-bottom: 1vh;
   background-color: #colors[tertiary];
   border-radius: 10px;
-  min-height: 100%;
-  height: 75vh;
+  height: 100%;
+  max-height: 78vh;
 }
 
 #blockly-canvas {
   margin: auto;
   width: 95%;
   height: 100%;
-  max-height: 88%;
+  min-height: 68vh;
+  max-height: 68vh;
 }
 
 #section-header {
